Code cleaning based on FindBugs